# Parser-for-C

./: CMakeLists.txt  LICENSE  README.md  assignstatements.c  assignstatements.h  datastructures.c  datastructures.h  definitionstatements.c  definitionstatements.h  expressionparsing.c  expressionparsing.h  forloops.c  forloops.h  indexedassignments.c  indexedassignments.h  infixtopostfix.c  infixtopostfix.h  main.c  printstatements.c  printstatements.h  stringutils.c  stringutils.h  structs.c  structs.h
